<resources>
    <string name="app_name">Embarque</string>

    <string name="action_send">Enviar</string>
    <string name="action_info">Informações</string>
    <string name="action_create">Criar</string>

    <string name="pontualidade">Pontualidade</string>
    <string name="informacoes">Informações e Atendimento</string>
    <string name="wifi">Wifi e Tomadas</string>
    <string name="alimentacao">Praça de Alimentação</string>
    <string name="conservacao">Conservação e Limpeza</string>
    <string name="seguranca">Segurança</string>

    <string name="details">Detalhes</string>
    <string name="history">Histórico</string>

    <string name="airport">Aeroporto</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_accurate_feedback">AccurateFeedback</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="feedback_create_success">Obrigado pelo seu feedback.</string>
    <string name="invite_to_accurate_feedback">Para contribuir ainda mais, nos dê algumas informações.</string>
    <string name="company">Companhia</string>
    <string name="fligth">Voo</string>
    <string name="skip">prefiro <u>pular</u>.</string>

    <string name="no_history">Ainda não temos nenhum feedback.\nSeja o primeiro a enviar um!</string>
    <string name="parse_error">Ocorreu um erro no nosso serviço.\nPor favor, tente mais tarde!</string>
    <string name="feedback_instructions">Faça uma avaliação das seguintes condições.</string>
    <string name="feedback_saved">Feedback salvo com sucesso!</string>

    <string name="modal_info_title">Sobre o App</string>
    <string name="proud_developed_at_hack_in_poa">Orgulhosamente desenvolvido durante o</string>
    <string name="nerd_team">Time Embarque.io\n\nCléber Henriques\nHenrique Güttler Morbin\nJean Carlo Emer\nTiago Cunha</string>
    <string name="modal_info_positive">OK</string>
</resources>
